--- a/app/views/site_pages/es.html.haml
+++ b/app/views/site_pages/es.html.haml
@@ -1,6 +1,7 @@
 - provide(:title, t('.title'))
 
 %h2.text-center= t('.es-heading')
+%p.mb-2= t('.es-explanation')
 
 =render "activities/school_level_activity_list"
 
