Add a Christmas banner to the front page

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-sm-12.col-md-8
-    %h1.display-4.text-center ALTopedia
+    = image_tag "Altopedia Xmas.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
 
     %p= t('.site-tagline')
 
