--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -1,4 +1,11 @@
 - provide(:title, "ALTopedia - Home")
+- content_for :head do
+  <meta property="og:title" content="ALTopedia" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="#{request.original_url}" />
+  <meta property="og:image" content="https://www.altopedia.org#{asset_path "Altopedia Xmas.png"}" />
+  <meta property="og:description" content="Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!" />
+  <meta property="og:site_name" content="ALTopedia" />
 
 .row
   .col-sm-12.col-md-8
