--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -20,7 +20,7 @@
         %li.nav-item.active
           = link_to t('layouts.register-new-account'), new_user_registration_path, class: "nav-link"
       %li.nav-item.active
-        = link_to t('layouts.new-activity'), new_activity_path, class: "nav-link"
+        = link_to t('layouts.contribute'), contribute_path, class: "nav-link"
       %li.nav-item.active
         = link_to t('layouts.job-listings'), jobs_path, class: "nav-link"
       %li.nav-item.active
