Add in a 'visible' scope for comments to simplify their inclusion in controllers

--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -13,7 +13,7 @@
           = link_to t('.view'), activity, class: "btn btn-outline-primary float-right"
         .card-footer
           - activity.tags.each do |tag|
-            %span= link_to tag.short_name, tag, class: "badge badge-success"
+            %span= link_to tag.long_name, tag, class: "badge badge-success"
 
 %br
 
