Update Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -13,6 +13,10 @@
     .card-body
       %h5= link_to "Englipedia archive", "http://englipedia.co/www.englipedia.net/Pages/default.html"
       %p.card-text Englipedia was the biggest resource for English-teaching resources until its sunset in 2018. It still has a mountain of activities for a wide variety of grammar points and school levels, so check out the archive!
+  .card.box-shadow
+    .card-body
+      %h5= link_to "ALT Insider", "http://www.altinsider.com"
+      %p.card-text A wide variety of resources for living and working in Japan, including activities, lesson plans, and podcasts.
 
 
 %h5 Activity sites
@@ -22,8 +26,8 @@
   %li= link_to "Kobe JET", "https://www.kobejet.com"
   %li= link_to "ALT Wiki", "https://www.altwiki.net"
   %li= link_to "Breaking News English", "https://breakingnewsenglish.com"
+  %li= link_to "English Web Book", "http://www.englishwebbook.com"
 
 %h5 Living and teaching in Japan
 %ul
-  %li= link_to "ALT Insider", "http://altinsider.com"
   %li= link_to "Reddit /r/teachinginjapan", "http://reddit.com/r/teachinginjapan"
