--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,4 @@
 .card.mt-2
   .card-body
     %h5= t('.called-out-tag')
-    %h6.text-center= link_to "Holiday - Christmas", tag_path(54), class: "text-center btn btn-success"
+    %h6.text-center= link_to "Holiday - New Years", tag_path(49), class: "text-center btn btn-success"
