--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -3,13 +3,13 @@
   <meta property="og:title" content="ALTopedia" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="#{request.original_url}" />
-  <meta property="og:image" content="https://www.altopedia.org#{asset_path "Altopedia Xmas.png"}" />
+  <meta property="og:image" content="https://www.altopedia.org#{asset_path "Altopedia banner.png"}" />
   <meta property="og:description" content="Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!" />
   <meta property="og:site_name" content="ALTopedia" />
 
 .row
   .col-sm-12.col-md-8
-    = image_tag "Altopedia Xmas.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
+    = image_tag "Altopedia banner.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
 
     %p= t('.site-tagline')
 
