--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -8,37 +8,42 @@
   <meta property="og:site_name" content="ALTopedia" />
 
 .row
-  .col-sm-12.col-md-8
-    = image_tag "Altopedia banner.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
-
-    %p= t('.site-tagline')
-
-    .card.main-post
-      - if @top_posts.first
-        %h5.card-header= @top_posts.first.title
-        .card-body
-          %p= markdown_for_posts(@top_posts.first.excerpt)
-          %span.float-right= link_to t('.read-more'), posts_path(@top_posts.first)
-    - if @top_posts.second
-      .card.secondary-post
-        %h5.card-header= link_to @top_posts.second.title, posts_path(@top_posts.second)
-    - if @top_posts.third
-      .card.secondary-post
-        %h5.card-header= link_to @top_posts.third.title, posts_path(@top_posts.third)
-    %p.mt-2.text-right= link_to t('.front-page-posts-index'), front_page_posts_path
-
-  .nagajob.col-sm-12.col-md-4.pt-2
-    = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
-    %small= link_to "Follow on Facebook to keep an eye on job openings!", "https://www.facebook.com/Nagajobrecruit/"
+  .col-md-8.col-sm-12.primary-content
+    .site-banner
+      = image_tag "Altopedia banner.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
+      %p= t('.site-tagline')
+    .news-posts
+      .card.main-post
+        - if @top_posts.first
+          %h5.card-header= @top_posts.first.title
+          .card-body
+            %p= markdown_for_posts(@top_posts.first.excerpt)
+            %span.float-right= link_to t('.read-more'), posts_path(@top_posts.first)
+      - if @top_posts.second
+        .card.secondary-post
+          %h5.card-header= link_to @top_posts.second.title, posts_path(@top_posts.second)
+      - if @top_posts.third
+        .card.secondary-post
+          %h5.card-header= link_to @top_posts.third.title, posts_path(@top_posts.third)
+      %p.mt-2.text-right= link_to t('.front-page-posts-index'), front_page_posts_path
+    .activity-lists
+      .row
+        .col-sm-12.col-md-6
+          = render partial: 'activities/compact_activity_list', locals: { label: t('.newest-activities'), activity_list: @newest }
+        .col-sm-12.col-md-6
+          = render partial: 'activities/compact_activity_list', locals: { label: t('.top-5-activities'), activity_list: @top5 }
+  .col-md-4.col-sm-12.secondary-content
+    .nagajob
+      = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
+      %small= link_to "Follow on Facebook to keep an eye on job openings!", "https://www.facebook.com/Nagajobrecruit/"
     = render "tag_of_the_moment"
     .card.mt-2
       .card-body
         %h5 Help your fellow teachers!
         %p Do you have a good game or activity? Want to give some advice or kudos to an activity? Join up and help out!
-        %p= link_to "Sign up today!", new_user_registration_path
+        %p= link_to "Contribute to ALTopedia!", contribute_path
+    
 
 
 .row
-  = render partial: 'activities/compact_activity_list', locals: { label: t('.newest-activities'), activity_list: @newest }
-  = render partial: 'activities/compact_activity_list', locals: { label: t('.top-5-activities'), activity_list: @top5 }
 
