--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -12,7 +12,8 @@
         = link_to "Edit Tag", edit_tag_path(@tag), class: "btn btn-outline-secondary btn-sm"
         - if policy(@tag).delete?
           = link_to "Delete", @tag, method: :delete, data: { confirm: "Are you sure you wanna delete this tag?" }, class: "btn btn-outline-secondary btn-sm"
-  = render partial: 'activities/compact_activity_list', locals: { label: t('.top-5-label'), activity_list: @top5 }
+  .col-md-4.col-sm-12
+    = render partial: 'activities/compact_activity_list', locals: { label: t('.top-5-label'), activity_list: @top5 }
 
 %h5.pt-2= t('.recent-activities-heading')
 .card-columns.pt-2
