--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,6 +6,7 @@
         %li= link_to t('layouts.about'), about_path, class: "text-light"
         %li= link_to t('layouts.contact'), contact_path, class: "text-light"
         %li= link_to t('layouts.contributors'), users_path, class: "text-light"
+        %li= link_to "Discord", "https://discord.gg/KTPmKJk", class: "text-light"
         %li= link_to t('layouts.acknowledgements'), thanks_path, class: "text-light"
     .col-md-4
       %h5.text-light= t('layouts.external-links')
