Add an Ajax link to view the site's Discord on the front page

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -48,7 +48,8 @@
       .card
         .card-body
           %p Questions? Need some ideas? Talk to other teachers!
-          .text-center= link_to "Load Shoutbox", fp_shoutbox_path, class: "btn btn-primary", remote: true
+          .text-center= link_to "Load Discord", discord_path, class: "btn btn-primary", remote: true
+          .text-center= link_to "Load Shoutbox", fp_shoutbox_path, class: "btn btn-primary mt-2", remote: true
           %small (requires JavaScript)
-    
+    #front-page-discord.mt-2
 
