Add a landing page for tags in the Theme category

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -38,6 +38,7 @@
     = link_to t('layouts.warm-ups'), warmups_path, class: "nav-link active"
     = link_to t('layouts.grammar'), grammar_path, class: "nav-link active"
     = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link active"
+    = link_to t('layouts.themes'), themes_path, class: "nav-link active"
     %p.nav-link.disabled= t('layouts.school-levels')
     = link_to t('layouts.es'), es_path, class: "nav-link active"
     = link_to t('layouts.jhs'), jhs_path, class: "nav-link active"
