--- a/app/views/tag_searches/new.html.haml
+++ b/app/views/tag_searches/new.html.haml
@@ -1,6 +1,15 @@
 -provide(:title, "ALTopedia - Search")
 
-%h3 Find activities by tags
+%h3 Text search
+
+.text-search
+  %p Search all activities on the site:
+  = form_tag(activity_search_path, method: :get) do
+    = text_field_tag :search
+    = submit_tag "Search", class: "btn btn-primary"
+
+
+%h3.mt-4 Find activities by tags
 
 %p Do you need to find an activity to fit your requirements? Choose the tags that fit what you need. Keep in mind that this will find activities that contain ALL of the tags you specify.
 
@@ -15,4 +24,4 @@
     = collection_check_boxes(:tag, :tag_ids, @tags, :id, :name_for_lists) do |tag|
       %li #{tag.check_box class: "form-check-input"} #{markdown(tag.label class: "form-check-label")}
 
-    =submit_tag "Submit", class: "btn btn-primary"
+    =submit_tag "Search", class: "btn btn-primary"
