--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -26,11 +26,14 @@
       %li.nav-item.active
         = link_to "ALTTO", altto_path, class: "nav-link"
       %li.nav-item.active
-        = link_to "Search", search_path, class: "nav-link"
+        = link_to "Tag Search", search_path, class: "nav-link"
       - if user_signed_in?
         %li.nav-item.active
           = link_to t('layouts.log_out'), destroy_user_session_path, method: :delete, class: "nav-link"
     %ul.navbar-nav.ml-auto
+      = form_tag(activity_search_path, method: :get, class: "form-inline mr-2") do
+        = text_field_tag :search
+        = submit_tag "Search", class: "btn btn-primary"
       - if I18n.locale == :ja
         %li.nav-item= link_to "English", "https://en.altopedia.org", class: "nav-link"
       - elsif I18n.locale == :en
