Update the tag of the moment

--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,4 @@
 .card.mt-2
   .card-body
     %h5= t('.called-out-tag')
-    %h6.text-center= link_to "Holiday - Valentine's Day", tag_path(50), class: "text-center btn btn-success"
+    %h6.text-center= link_to "Vocabulary Review", tag_path(35), class: "text-center btn btn-success"
