Add in preliminary conversion from Englipedia activies to regular activities

--- a/app/views/englipedia_activities/show.html.haml
+++ b/app/views/englipedia_activities/show.html.haml
@@ -31,4 +31,4 @@
 %p Description:
 %p= markdown(@activity.description)
 
-%span= link_to "Looks good - make it an ALTopedia activity!", "#", class: "btn btn-primary"
+%span= link_to "Looks good - make it an ALTopedia activity!", convert_englipedia_activity_path, method: :put, class: "btn btn-primary"
