Mark Englipedia Activities as converted when they're converted, and add display for this on the index page

--- a/app/views/englipedia_activities/index.html.haml
+++ b/app/views/englipedia_activities/index.html.haml
@@ -9,12 +9,16 @@
     %tr
       %th Title
       %th Author
-      %th Submission date
-      %th Estimated time
+      %th Outline
   - @activities.each do |activity|
     %tr
-      %td= link_to activity.title, activity
-      %td= activity.author
-      %td= activity.submission_date
-      %td= activity.estimated_time
+      - if activity.converted?
+        %td.table-danger= link_to activity.title, activity
+        %td.table-danger= activity.author
+        %td.table-danger= activity.outline
+      - else
+        %td= link_to activity.title, activity
+        %td= activity.author
+        %td= activity.outline
+= paginate @activities
     
