--- a/app/views/englipedia_activities/show.html.haml
+++ b/app/views/englipedia_activities/show.html.haml
@@ -33,6 +33,7 @@
   -if @activity.hs
     %span High School
 %p Included files:
+%p Please check to see if any files give a 404 error! Currently the activities won't convert correctly if they do. I'll need to find a way to let us edit the list of activity files.
 - if @links.any?
   %ul
     - @links.each do |link|
