Restrict Englipedia Activity options to admins and moderators

--- a/app/views/site_pages/modqueue.html.haml
+++ b/app/views/site_pages/modqueue.html.haml
@@ -60,6 +60,7 @@
         %li= link_to "Make a new tag category", new_tag_category_path
         %li= link_to "Make a new job post", new_job_post_path
       %li= link_to "Make a new textbook", new_textbook_path
+      %li= link_to "Archived Englipedia activities", englipedia_activities_path
 
   .col-sm-10.col-lg-5
     %h4 The latest 5 users
