Add a parameter to the compact activity display list for displaying upvote counts

--- a/app/views/activities/_compact_activity_list.html.haml
+++ b/app/views/activities/_compact_activity_list.html.haml
@@ -7,4 +7,5 @@
           %li.list-group-item
             %span
               =link_to activity.name, activity, class: "card-link"
-              %span.badge.badge-info.float-right= activity.upvote_count 
+              - if show_upvote_count
+                %span.badge.badge-info.float-right= activity.upvote_count 
