--- a/app/views/activities/_school_level_activity_list.html.haml
+++ b/app/views/activities/_school_level_activity_list.html.haml
@@ -1,8 +1,8 @@
 .row.mb-4
   .col-sm-10.col-md-4
-    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.top-10-activities'), activity_list: @top10 }
+    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-sm-10.col-md-4
-    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.warm-ups'), activity_list: @warmups }
+    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.warm-ups'), activity_list: @warmups, show_upvote_count: true }
   .col-sm-10.col-md-4.pt-2
     %h4 Textbooks
     %ul
