Add a partial to the front page about seasonal initiatives

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -38,6 +38,7 @@
       %small= link_to "Follow on Facebook to keep an eye on job openings!", "https://www.facebook.com/Nagajobrecruit/"
     .tag-of-the-moment
       = render "tag_of_the_moment"
+    = render "season_initiative"
     .signup-reminder
       .card.mt-2
         .card-body
