Add short activity descriptions to the compact activity list partial

--- a/app/views/activities/_compact_activity_list.html.haml
+++ b/app/views/activities/_compact_activity_list.html.haml
@@ -7,5 +7,6 @@
           %li.list-group-item
             %span
               =link_to activity.name, activity, class: "card-link"
+              %small= activity.short_description
               - if show_upvote_count
                 %span.badge.badge-info.float-right= activity.upvote_count 
