--- a/app/views/site_pages/about.html.haml
+++ b/app/views/site_pages/about.html.haml
@@ -1,11 +1,12 @@
-- provide(:title, "About")
+- provide(:title, "ALTopedia - About")
 
-%p ALTopedia is a site for finding and sharing activities and games to use in English classes. It's designed for the needs of ALTs in Japan, but we hope you'll find it useful in other situations too.
+%h3 About the site
 
-%p Our goal for the site is to make it as easy as possible to share and discover activities. They're categorized and indexed based on their tags, so try browsing around on different tags to see what people have shared and how to tag your own activities. Activities have to be approved by our moderators, mostly to keep spam and other unproductive content from clogging up the site. It's a quick process, though, so don't let that stop you from contributing!
+%p ALTopedia is the successor site to Englipedia.
 
-%p The site is still in active development, with a lot more features and changes planned. We know that many teachers don't have access to the greatest computers at work, so we're trying to keep the layout simple and compatible with older browsers. Let us know if you encounter any bugs or issues!
+%p For about ten years, Englipedia was the premiere resource site for English teachers in Japan. Hundreds of teachers contributed their ideas and feedback, and it was the first place anyone sent new teachers when they needed to find something for their classes.
 
-%p ALTopedia runs on the Ruby on Rails framework, and was made possible due to a wide variety of open-source software. In the spirit of education and sharing, the code that runs the site is open source as well. If you're familiar with web development and Rails in particular, you can help contribute and improve the site!
+%p The administration passed hands several times over the years, and the site's final admin, Al, found that the platform the site was running on was being discontinued. He sent out an appeal for anyone to help him build a newer, modern site and that's when Jake got in touch with him. Since the foundations of the site were being completely rebuilt, it was renamed ALTopedia and launched in April of 2018.
 
-%p= link_to "GitHub - ALTopedia", "https://github.com/HeadBeeGuy/alt-activities"
+%p In the spirit of education and sharing, the site is completely free. It's a custom-built web application designed for the needs of ALTs and other English teachers, and we're continually adding new features. Our goal from the start was to make a site that's easy to use and easy to contribute your ideas to. Many teachers have already signed up and shared their activities for anyone else who might find them useful. Let's put our heads together and make our English classes the best they can be!
+
