Update the Contact page

--- a/app/views/site_pages/contact.html.haml
+++ b/app/views/site_pages/contact.html.haml
@@ -2,9 +2,9 @@
 
 %h3 Contact ALTopedia
 
-%p Need to get in touch with us? We're still getting the site set up, but for now, you can contact:
+%p Need to get in touch with us?
 
 %ul
   %li
     %strong Jake
-    for technical issues on the site: jake.alt.dev (AT) gmail.com
+    for technical issues and other general inquiries about the site: jake.alt.dev (AT) gmail.com
