--- a/app/views/site_pages/themes.html.haml
+++ b/app/views/site_pages/themes.html.haml
@@ -3,8 +3,15 @@
 %h3= t('.header')
 
 .row
-  - @tags.each do |tag|
+  - @theme_tags.each do |tag|
     .card.col-sm-8.col-md-6.col-lg-3
       .card-body
         %span.font-weight-bold= link_to tag.long_name, tag
 
+%h3.mt-3= t('.holidays')
+
+.row
+  - @holiday_tags.each do |tag|
+    .card.col-sm-8.col-md-6.col-lg-3
+      .card-body
+        %span.font-weight-bold= link_to tag.long_name, tag
