Add another link in the Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -27,6 +27,7 @@
   %li= link_to "ALT Wiki", "https://www.altwiki.net"
   %li= link_to "Breaking News English", "https://breakingnewsenglish.com"
   %li= link_to "English Web Book", "http://www.englishwebbook.com"
+  %li= link_to "Eigo Ganbare", "https://eigoganbare.com"
 
 %h5 Living and teaching in Japan
 %ul
