--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,18 +1,13 @@
-- provide(:title, t('.title'))
+- provide(:title, "ALTopedia - User list")
 
-%h4= t('.top-contributors')
+%h4 Users (newest first)
+      
 .row.mb-2
-  - @top_contributors.each do |contributor|
+  - @all_users.each do |user|
     .card.col-sm-8.col-md-6.col-lg-3
       .card-body
-        %span.font-weight-bold= link_to "#{contributor.username} (#{contributor.activity_count})", contributor
-
-%h4= t('.newest-users')
-.row.mb-2
-  - @all_users.each do |contributor|
-    .card.col-sm-8.col-md-6.col-lg-3
-      .card-body
-        %span.font-weight-bold= link_to "#{contributor.username} (#{contributor.activity_count})", contributor
+        %span.font-weight-bold= link_to "#{user.username} (#{user.activity_count})", user
+        %small= user.created_at.strftime("%B %d")
 = paginate @all_users
 
 %h4= t('.moderators')
@@ -22,3 +17,9 @@
       .card-body
         %span.font-weight-bold= link_to "#{user.username}", user
 
+%h4 Administrators
+.row.mb-2
+  - @admins.each do |user|
+    .card.col-sm-8.col-md-6.col-lg-3
+      .card-body
+        %span.font-weight-bold= link_to "#{user.username}", user
