--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -32,3 +32,4 @@
 %h5 Living and teaching in Japan
 %ul
   %li= link_to "Reddit /r/teachinginjapan", "http://reddit.com/r/teachinginjapan"
+  %li= link_to "Reddit /r/ALTinjapan", "http://reddit.com/r/altinginjapan"
