--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,4 @@
 .card.mt-2
   .card-body
     %h5= t('.called-out-tag')
-    %h6.text-center= link_to "Grammar - Be verb", tag_path(111), class: "text-center btn btn-success"
+    %h6.text-center= link_to "Grammar - Plural Nouns", tag_path(31), class: "text-center btn btn-success"
