--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -35,7 +35,7 @@
   .col-md-4.col-sm-12.secondary-content
     .nagajob
       = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
-      %small= link_to "Follow on Facebook to keep an eye on job openings!", "https://www.facebook.com/Nagajobrecruit/"
+      %p.mt-2= link_to "Level up your career in Japan! Register now and get the inside scoop on jobs in scenic Nagano!", "https://www.facebook.com/Nagajobrecruit/"
     .tag-of-the-moment
       = render "tag_of_the_moment"
     .signup-reminder
@@ -50,6 +50,5 @@
           %p Questions? Need some ideas? Talk to other teachers!
           .text-center= link_to "Load Discord", discord_path, class: "btn btn-primary", remote: true
           .text-center= link_to "Load Shoutbox", fp_shoutbox_path, class: "btn btn-primary mt-2", remote: true
-          %small (requires JavaScript)
     #front-page-discord.mt-2
 
