--- a/app/views/activity_links/new.html.haml
+++ b/app/views/activity_links/new.html.haml
@@ -5,12 +5,12 @@
 
 .card.mb-2
   .card-body
-    %h4= link_to @source_activity.name, @source_activity
-    %p= @source_activity.short_description
+    %h4= link_to @inspired_activity.name, @inspired_activity
+    %p= @inspired_activity.short_description
 
 %p= t('.search_explanation')
 
 = form_tag(link_search_path, method: :get, class: "form-inline") do
   = text_field_tag :search
-  = hidden_field_tag :source_id, @source_activity.id
+  = hidden_field_tag :inspired_id, @inspired_activity.id
   = submit_tag t('.search'), class: "btn btn-primary"
