Update the tag of the moment

--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,4 +1,4 @@
 .card.mt-2
   .card-body
     %h5= t('.called-out-tag')
-    %h6.text-center= link_to "Grammar - Relative Pronouns", tag_path(20), class: "text-center btn btn-success"
+    %h6.text-center= link_to "Holiday - Halloween", tag_path(52), class: "text-center btn btn-success"
