Update textbook index page to use different card style

--- a/app/views/site_pages/contribute.html.haml
+++ b/app/views/site_pages/contribute.html.haml
@@ -10,7 +10,7 @@
 %h5= link_to t('.translation-heading'), "https://github.com/HeadBeeGuy/alt-activities/blob/master/config/locales/en.yml"
 %p= t('.translation-explanation')
 
-%h5= t('.textbook-info-heading')
+%h5= link_to t('.textbook-info-heading'), contact_path
 %p= t('.textbook-info-explanation')
 
 %h5= t('.grammar-heading')
