Remove tag of the moment from front page and add recent comment display

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,3 +144,9 @@ a:hover {
   background-color: $altopedia_primary;  
   border-color: $altopedia_primary;
 }
+
+.ellipsis-overflow {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
