--- a/app/views/activities/_school_level_activity_list.html.haml
+++ b/app/views/activities/_school_level_activity_list.html.haml
@@ -1,21 +1,21 @@
 .row.mb-4
-  .col-sm-10.col-md-4
-    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.top-10-activities'), activity_list: @top10, show_upvote_count: true }
-  .col-sm-10.col-md-4
-    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.warm-ups'), activity_list: @warmups, show_upvote_count: true }
-  .col-sm-10.col-md-4.pt-2
-    %h4 Textbooks
+  .col-sm-10.col-md-9
+    %h4.text-center Newest activities
+
+    .card-columns
+      - @all_activities.each do |activity|
+        .card
+          .card-body
+            %h5.card-title= link_to activity.name, activity
+            %p= activity.short_description
+    = paginate @all_activities
+
+  .col-sm-10.col-md-3.pt-2
+    %h4.text-center Textbooks
     %ul
       - @textbooks.each do |textbook|
         %li= link_to textbook.name, textbook
 
-%h5 All activities
+    = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.top-10-activities'), activity_list: @top10, show_upvote_count: true }
+    -# = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.warm-ups'), activity_list: @warmups, show_upvote_count: true }
 
-.card-columns
-  - @all_activities.each do |activity|
-    .card
-      .card-body
-        %h5.card-title= link_to activity.name, activity
-        %p= activity.short_description
-
-= paginate @all_activities
